<resources>
    <string name="app_name">Marriage Suggestion</string>
    <string name="sex">Sex</string>
    <string name="hint_sex">(Input sex)</string>
    <string name="age">Age</string>
    <string name="hint_age">(Input age)</string>
    <string name="button">Confirm</string>
    <string name="suggestion">Suggestion: </string>

    <string name="sex_male">male</string>
    <string name="sex_Male">Male</string>
    <string name="sex_female">female</string>
    <string name="sex_Female">Female</string>
    <string name="sug_not_hurry">Don\'t hurry</string>
    <string name="sug_get_married">Get married</string>
    <string name="sug_find_couple">Find couple</string>

</resources>
