<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.thianhe.hw2.MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_sex"
        android:inputType="text"
        android:textColorLink="@color/colorPrimary"
        tools:hint="@string/hint_sex" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@android:color/black"
        android:textColorLink="@color/colorPrimary"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_age"
        android:inputType="number"
        android:textColorLink="@color/colorPrimary"
        tools:hint="@string/hint_age" />

    <Button
        android:id="@+id/btnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestion"
        android:textColor="@android:color/black"
        android:textSize="25sp" />
</LinearLayout>
